# whatsapp-py-client

./: .gitignore  LICENSE  MANIFEST.in  README.md  WHATSAPP_PY_API_REFERENCE.md  WHATSAPP_PY_GUIDE.md  example.py  pyproject.toml  send_example.py  setup.py
whatsapp/: __init__.py  cli.py  client.py  constants.py  factories.py
whatsapp/auth/: __init__.py  base.py  local_auth.py  no_auth.py  remote_auth.py
whatsapp/injected/: __init__.py  _utils_source.js  auth_js.py  utils_js.py
whatsapp/structures/: __init__.py  base.py  chat.py  contact.py  location_poll.py  message.py  message_media.py  misc.py
